argo_CD/argocd-ingressroute.yaml
# apiVersion: traefik.io/v1alpha1 #traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: argocd-https
#   namespace: argocd
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`argocd.christ-devops.duckdns.org`)
#       kind: Rule
#       services:
#         - name: argocd-server
#           port: 443
#           scheme: https
  # tls:
  #   certResolver: myresolver


---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.christ-devops.duckdns.org`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: default-redirectscheme
          namespace: argocd
